événement de clicks

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,3 +1,6 @@
 Mon épicerie
 <app-test></app-test>
+<app-test></app-test>
+<app-test></app-test>
+<app-test></app-test>
 <router-outlet></router-outlet>
