--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,2 +1,8 @@
-<p>{{title}} - {{quantity}}</p>
+<div>
+{{clickCount}}
+<button (click)="addClick()">Ajouter un click</button>
+</div>
+<!-- <p>{{title}} - {{quantity}}</p>
 <p>{{getTaxes()}}</p>
+
+<button [disabled]="quantity > 3">Test</button> -->
