epicerie liste produits

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,6 +1,5 @@
 Mon épicerie
-<app-test></app-test>
-<app-test></app-test>
-<app-test></app-test>
-<app-test></app-test>
+<app-product-list></app-product-list>
+
+
 <router-outlet></router-outlet>
