--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,4 +1,6 @@
-<div>
+
+    {{lastUpdate | date: 'dd/MM/YYYY'}}
+    <div>
     <img src="/assets/1.jpg" alt="image 1">
     <!-- Two-way binding -->
     {{title}}
