--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,6 +1,6 @@
 Mon épicerie
-<app-animaux></app-animaux>
-<!-- <app-product-list></app-product-list> -->
+<!-- <app-animaux></app-animaux> -->
+<app-product-list></app-product-list>
 
 
 <router-outlet></router-outlet>
