--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,6 +1,2 @@
-Mon épicerie
-<!-- <app-animaux></app-animaux> -->
-<app-product-list></app-product-list>
-
-
+<app-menu></app-menu>
 <router-outlet></router-outlet>
