--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-12 col-lg-3" *ngFor="let product of products">
+        <div class="col-12 col-lg-3" *ngFor="let product of products; let i = index">
             <div class="card" [ngClass]="{'bg-danger-light' : product.stock < 5}">
                 <img class="card-img-top" [src]="product.img" [alt]="'image ' + product.name" />
                 <div class="card-body">
@@ -15,7 +15,7 @@
                     </ng-template>
 
                     <p class="card-text">{{product.price}} €</p>
-                    <a class="btn btn-secondary d-block mt-4">Modifier</a>
+                    <a class="btn btn-secondary d-block mt-4" [routerLink]="['/produits', i]">Modifier</a>
                     <button class="btn btn-danger d-block mt-2 w-100">Supprimer</button>
                 </div>
             </div>
