--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,25 +1,5 @@
 <div class="container">
     <div class="row">
-
-        <div class="col-12 col-lg-3" *ngFor="let product of products; let i = index">
-            <div class="card" [ngClass]="{'bg-danger-light' : product.stock < 5}">
-                <img class="card-img-top" [src]="product.img" [alt]="'image ' + product.name" />
-                <div class="card-body">
-                    <h5 class="card-title">{{product.name | uppercase}}</h5>
-
-                    <ng-container *ngIf="product.stock >= 5; else lowStock">
-                        <p class="card-text text-success">En stock ( {{product.stock}} )</p>
-                    </ng-container>
-                    <ng-template #lowStock>
-                        <p class="card-text text-danger">Stock faible ( {{product.stock}} )</p>
-                    </ng-template>
-
-                    <p class="card-text">{{product.price}} €</p>
-                    <a class="btn btn-secondary d-block mt-4" [routerLink]="['/produits', i]">Modifier</a>
-                    <button class="btn btn-danger d-block mt-2 w-100">Supprimer</button>
-                </div>
-            </div>
-        </div>
-
+        <app-product-card class="col-12 col-lg-3" *ngFor="let product of products; let i = index" [product]="product" [i]="i"></app-product-card>
     </div>
 </div>
