--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -1,1 +1,6 @@
-<p>add-product works!</p>
+<div class="container">
+    <h1 class="text-center">Ajouter un produit</h1>
+    <div class="row justify-content-center">
+        <app-product-form  class="col-12 col-lg-3"></app-product-form>
+    </div>
+</div>
